--- a/index.html
+++ b/index.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="utf-8">
-		<meta http-equiv="Content-Security-Policy" content="default-src 'self'; frame-src 'none'; object-src 'none'; connect-src *;">
-		<title>gamja IRC client</title>
-		<link rel="stylesheet" href="./style.css">
+		<meta charset="utf-8" />
+		<meta
+			http-equiv="Content-Security-Policy"
+			content="default-src 'self'; frame-src 'none'; object-src 'none'; connect-src *;"
+		/>
+		<title>dawdle.space lounge</title>
+		<link rel="stylesheet" href="./style.css" />
+		<link rel="stylesheet" href="./dawdle.css" />
 		<script type="module" src="./main.js"></script>
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="manifest" href="manifest.json">
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="manifest" href="manifest.json" />
 	</head>
 	<body>
+		<div id="irc"></div>
+
 		<noscript>
 			<p>This application requires JavaScript. Please enable it!</p>
 		</noscript>
